--- a/Astro/Views/Base.lproj/Main.storyboard
+++ b/Astro/Views/Base.lproj/Main.storyboard
@@ -152,52 +152,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wSl-C5-PGG">
-                                <rect key="frame" x="87.5" y="318.5" width="200" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="ZPW-13-mAe"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="uGz-xR-84N">
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter a Weight..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AD6-cQ-Udx">
-                                <rect key="frame" x="80" y="276" width="219" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </searchBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your weight" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AD6-cQ-Udx">
+                                <rect key="frame" x="66.5" y="130" width="242" height="34"/>
                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="30"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90k-Ng-ah2">
-                                <rect key="frame" x="87" y="184" width="196" height="60"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="40"/>
-                                <state key="normal" title="Push Me!"/>
-                                <connections>
-                                    <action selector="weightForPlanetsButtonPressed:" destination="tWN-vm-GRG" eventType="touchUpInside" id="AIp-di-Bvk"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Y1-XZ-aTB">
-                                <rect key="frame" x="0.0" y="370" width="375" height="0.0"/>
-                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="30"/>
-                                <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="standingOnPlanet" translatesAutoresizingMaskIntoConstraints="NO" id="RaI-F9-Zhk">
+                                <rect key="frame" x="0.0" y="169" width="375" height="502"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RaI-F9-Zhk" secondAttribute="height" multiplier="375:502" id="I4y-z8-DVI"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wSl-C5-PGG" firstAttribute="centerX" secondItem="agq-gj-JmO" secondAttribute="centerX" id="Bod-gJ-sDb"/>
-                            <constraint firstItem="8Y1-XZ-aTB" firstAttribute="leading" secondItem="8g0-fo-mqt" secondAttribute="leading" id="PbS-kv-8NL"/>
-                            <constraint firstItem="8g0-fo-mqt" firstAttribute="trailing" secondItem="8Y1-XZ-aTB" secondAttribute="trailing" id="Rlo-yt-dR9"/>
-                            <constraint firstItem="wSl-C5-PGG" firstAttribute="centerY" secondItem="agq-gj-JmO" secondAttribute="centerY" id="bab-AO-g2G"/>
-                            <constraint firstItem="8Y1-XZ-aTB" firstAttribute="top" secondItem="wSl-C5-PGG" secondAttribute="bottom" constant="21.5" id="chg-du-0mK"/>
+                            <constraint firstItem="RaI-F9-Zhk" firstAttribute="leading" secondItem="8g0-fo-mqt" secondAttribute="leading" id="8sJ-k2-tss"/>
+                            <constraint firstItem="uGz-xR-84N" firstAttribute="top" secondItem="8g0-fo-mqt" secondAttribute="top" id="Ar1-fC-xNy"/>
+                            <constraint firstItem="uGz-xR-84N" firstAttribute="trailing" secondItem="8g0-fo-mqt" secondAttribute="trailing" id="HZk-VT-boE"/>
+                            <constraint firstAttribute="bottom" secondItem="RaI-F9-Zhk" secondAttribute="bottom" constant="-4" id="WPa-2g-ICf"/>
+                            <constraint firstItem="AD6-cQ-Udx" firstAttribute="top" secondItem="uGz-xR-84N" secondAttribute="bottom" constant="10" id="c9s-13-kkt"/>
+                            <constraint firstItem="RaI-F9-Zhk" firstAttribute="trailing" secondItem="8g0-fo-mqt" secondAttribute="trailing" id="coS-cL-vX0"/>
+                            <constraint firstItem="uGz-xR-84N" firstAttribute="centerX" secondItem="agq-gj-JmO" secondAttribute="centerX" id="hBD-zA-di4"/>
+                            <constraint firstItem="AD6-cQ-Udx" firstAttribute="centerX" secondItem="agq-gj-JmO" secondAttribute="centerX" id="o3N-Uj-wHq"/>
+                            <constraint firstItem="uGz-xR-84N" firstAttribute="leading" secondItem="8g0-fo-mqt" secondAttribute="leading" id="uhT-mV-Ms1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8g0-fo-mqt"/>
                     </view>
                     <connections>
-                        <outlet property="enteredWeight" destination="wSl-C5-PGG" id="i4F-WJ-PhU"/>
-                        <outlet property="validationError" destination="8Y1-XZ-aTB" id="peZ-uK-BKo"/>
+                        <outlet property="enterWeightBar" destination="uGz-xR-84N" id="mBw-Lb-4HL"/>
+                        <outlet property="message" destination="AD6-cQ-Udx" id="dhH-9a-yYR"/>
                         <segue destination="LUs-hS-8T0" kind="show" identifier="goToPlanetWeightScreen" id="uUH-Da-ymc"/>
                     </connections>
                 </viewController>
@@ -333,4 +323,7 @@
             <point key="canvasLocation" x="-1185" y="389"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="standingOnPlanet" width="346" height="470"/>
+    </resources>
 </document>
