--- a/Astro/Supporting Files/Base.lproj/LaunchScreen.storyboard
+++ b/Astro/Supporting Files/Base.lproj/LaunchScreen.storyboard
@@ -18,24 +18,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sup Yawl, Welcome to space shit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Gr-7e-pIg">
-                                <rect key="frame" x="61.5" y="323" width="252" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Zdk-n8-q6v">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Zdk-n8-q6v" secondAttribute="height" multiplier="1:1" id="Dkp-fu-gps"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9hK-4s-dnX">
+                                <rect key="frame" x="0.0" y="375" width="375" height="292"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Astro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Gr-7e-pIg">
+                                        <rect key="frame" x="89.5" y="102" width="196.5" height="88.5"/>
+                                        <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="80"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="7Gr-7e-pIg" firstAttribute="centerX" secondItem="9hK-4s-dnX" secondAttribute="centerX" id="89V-N5-Wqb"/>
+                                    <constraint firstItem="7Gr-7e-pIg" firstAttribute="centerY" secondItem="9hK-4s-dnX" secondAttribute="centerY" id="daJ-7g-TmF"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7Gr-7e-pIg" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Esm-V9-kEe"/>
-                            <constraint firstItem="7Gr-7e-pIg" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="F2e-6v-3eE"/>
+                            <constraint firstAttribute="bottom" secondItem="9hK-4s-dnX" secondAttribute="bottom" id="5uR-48-TEZ"/>
+                            <constraint firstItem="Zdk-n8-q6v" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="BUy-xo-7vc"/>
+                            <constraint firstItem="9hK-4s-dnX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Omy-lv-Onn"/>
+                            <constraint firstItem="Zdk-n8-q6v" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bSd-jx-5he"/>
+                            <constraint firstItem="Zdk-n8-q6v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iKZ-Mf-5Th"/>
+                            <constraint firstItem="9hK-4s-dnX" firstAttribute="top" secondItem="Zdk-n8-q6v" secondAttribute="bottom" id="mpV-R8-8uH"/>
+                            <constraint firstItem="9hK-4s-dnX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mvj-pj-z2H"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="1024" height="1024"/>
+    </resources>
 </document>
